# Nukleio-SDKs

./: .gitignore  CONTRIBUTING.md  MIGRATION.md  README.md  RELEASING.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  release-dotnet.yml  release-go.yml  release-java.yml  release-npm.yml  release-python.yml
scripts/: verify_release_versions.py
sdks/dotnet/: README.md
sdks/dotnet/src/Nukleio/: Nukleio.csproj  NukleioApiException.cs  NukleioClient.cs  UserData.cs
sdks/dotnet/tests/Nukleio.Tests/: Nukleio.Tests.csproj  NukleioClientTests.cs
sdks/go/: README.md  client.go  client_test.go  go.mod  models.go
sdks/java/: README.md  pom.xml
sdks/java/src/main/java/io/github/ericnohara/nukleio/: NukleioApiException.java  NukleioClient.java  UserData.java
sdks/java/src/test/java/io/github/ericnohara/nukleio/: NukleioClientTest.java
sdks/python/: README.md  pyproject.toml
sdks/python/src/nukleio/: __init__.py  client.py  models.py
sdks/python/tests/: test_client.py
sdks/typescript/core/: README.md  nukleio-core-0.1.0.tgz  package.json  tsconfig.json
sdks/typescript/core/src/: client.ts  models.ts
sdks/typescript/core/tests/: client.test.ts
sdks/typescript/react/: LICENSE  README.md  nukleio-react-0.1.0.tgz  package.json  tsconfig.json  vitest.config.ts
sdks/typescript/react/src/: UserContext.tsx  index.ts
sdks/typescript/react/tests/: UserContext.test.tsx
specification/: openapi.yaml
specification/fixtures/: user-data.json
