[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "nukleio"
version = "0.1.0"
description = "Typed, dependency-free Python client for the Nukleio public API"
readme = "README.md"
requires-python = ">=3.10"
license = "ISC"
authors = [{ name = "Eric Nohara-LeClair" }]
keywords = ["nukleio", "portfolio", "api", "sdk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/EricNohara/Nukleio-SDKs"
Repository = "https://github.com/EricNohara/Nukleio-SDKs.git"
Issues = "https://github.com/EricNohara/Nukleio-SDKs/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nukleio = ["py.typed"]
